--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.floatleft {
+  float: left;
+}
+
 .coloredbody {
   background-color: rgb(245, 242, 239);
   zoom: 1;
